# python-template

./: .editorconfig  .flake8  .githooks.yml  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  tox.ini
.github/workflows/: hooks.yml  tests.yml
docs/: conf.py  index.rst  python_template.rst
examples/: usage_example.ipynb
src/: README.md
src/python_template/: __about__.py  __about__.pyi  api.py  api.pyi
tests/: conftest.py
tests/python_template/: test_api.py
